--- a/kodi_alarm.conf
+++ b/kodi_alarm.conf
@@ -1,5 +1,11 @@
 [program:kodi_alarm]
 directory=/root/kodi_alarm
+command=python alarm.py
+autorestart=true
+redirect_sterr=true
+
+[program:kodi_alarm_api]
+directory=/root/kodi_alarm
 command=python api.py
 autorestart=true
 redirect_sterr=true
